[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wixok.folder"
version = "25.8.3"
description = "Simple Python package for folder operations."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [{ name = "Wixok", email = "contact@wixok.com" }]
maintainers = [{ name = "Mohammed Dellihr", email = "mohammeddellihr@maildoo.com" }]
keywords = ["text", "file", "io", "toolkit", "folder"]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/wixok/folder"
Issues = "https://github.com/wixok/folder/issues"

[project.scripts]
folder = "folder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wixok*"]
exclude = ["tests*"]